Salesforce/deploy/main/default/objects/Demo__e/Demo__e.object-meta.xml
<CustomObject>
    <label>Demo</label>
    <pluralLabel>Demos</pluralLabel>
</CustomObject>