Salesforce/deploy/main/default/objects/Demo__e/fields/fromId__c.field-meta.xml
<CustomField>
    <fullName>fromId__c</fullName>
    <label>From Id</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>