Salesforce/deploy/main/default/objects/Demo__e/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>