Salesforce/deploy/main/default/objects/Demo__e/fields/private__c.field-meta.xml
<CustomField>
    <fullName>private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>