Salesforce/deploy/main/default/objects/Demo__e/fields/toId__c.field-meta.xml
<CustomField>
    <fullName>toId__c</fullName>
    <label>To Id</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>